# rust-retry

./: .gitmodules  COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  EXECUTOR_TESTS_SUMMARY.md  README.md  README.zh_CN.md  ci-check.sh  coverage.sh
.circleci/: COMPLETION_SUMMARY.md  COVERALLS_SETUP.zh_CN.md  QUICKSTART.md  QUICKSTART.zh_CN.md  README.md  README.zh_CN.md  README_GENERIC.md  SETUP.md  SETUP.zh_CN.md  config.yml
.rs-ci/: README.md  README.zh_CN.md  align-ci.sh  ci-check.sh  coverage.sh  style-check.sh
.rs-ci/.circleci/: config.yml
doc/: retry_redesign.zh_CN.md
src/: builder.rs  config.rs  constants.rs  default_config.rs  delay_strategy.rs  error.rs  events.rs  executor.rs  lib.rs  mod.rs  retry_executor.rs  retry_executor_builder.rs  serde_millis.rs  simple_config.rs
src/error/: attempt_executor_error.rs  attempt_failure.rs  attempt_panic.rs  mod.rs  retry_attempt_failure.rs  retry_config_error.rs  retry_decider.rs  retry_error.rs  retry_error_reason.rs  retry_failure_action.rs
src/event/: abort_event.rs  abort_reason.rs  attempt_failure_decision.rs  attempt_failure_listener.rs  attempt_success_listener.rs  attempt_timeout_source.rs  before_attempt_listener.rs  failure_event.rs  listeners.rs  mod.rs  retry_abort_context.rs  retry_after_hint.rs  retry_attempt_context.rs  retry_context.rs  retry_context_parts.rs  retry_decision.rs  retry_error_listener.rs  retry_event.rs  retry_listeners.rs  retry_reason.rs  success_event.rs
src/events/: abort_context.rs  failure_context.rs  listeners.rs  retry_context.rs  success_context.rs
src/executor/: async_attempt.rs  async_attempt_future.rs  async_value_operation.rs  attempt_cancel_token.rs  blocking_attempt_message.rs  mod.rs  retry.rs  retry_builder.rs  retry_executor.rs  retry_executor_builder.rs  retry_flow_action.rs  sync_attempt.rs  sync_value_operation.rs
src/options/: attempt_timeout_option.rs  attempt_timeout_policy.rs  mod.rs  parse_retry_jitter_error.rs  retry_config_values.rs  retry_delay.rs  retry_delay_duration_format.rs  retry_jitter.rs  retry_options.rs
tests/: builder_tests.rs  constants_tests.rs  default_config_tests.rs  delay_strategy_tests.rs  error_tests.rs  event_tests.rs  events_tests.rs  executor_tests.rs  integration_tests.rs  lib_tests.rs  mod.rs  operation_timeout_tests.rs  simple_config_tests.rs
tests/coverage/: coverage_support_tests.rs
tests/delay/: retry_delay_tests.rs
tests/error/: attempt_executor_error_tests.rs  attempt_failure_tests.rs  attempt_panic_tests.rs  mod.rs  retry_config_error_basic_tests.rs  retry_config_error_tests.rs  retry_decider_tests.rs  retry_error_reason_tests.rs  retry_error_tests.rs
tests/event/: abort_event_tests.rs  abort_reason_tests.rs  attempt_failure_decision_tests.rs  attempt_timeout_source_tests.rs  failure_event_tests.rs  mod.rs  retry_context_parts_tests.rs  retry_context_tests.rs  retry_decision_tests.rs  retry_event_tests.rs  retry_listeners_tests.rs  retry_reason_tests.rs  success_event_tests.rs
tests/events/: abort_context_tests.rs  failure_context_tests.rs  mod.rs  retry_context_tests.rs  success_context_tests.rs
tests/executor/: async_attempt_tests.rs  async_value_operation_tests.rs  attempt_cancel_token_tests.rs  blocking_attempt_message_tests.rs  mod.rs  retry_async_tests.rs  retry_builder_tests.rs  retry_executor_builder_tests.rs  retry_executor_tests.rs  retry_flow_action_tests.rs  retry_run_and_listener_tests.rs  retry_tests.rs  retry_worker_and_blocking_timeout_tests.rs  sync_attempt_tests.rs  sync_value_operation_tests.rs
tests/executor/retry_executor/: mod.rs  retry_executor_tests.rs
tests/executor/retry_executor_builder/: mod.rs  retry_executor_builder_tests.rs
tests/jitter/: retry_jitter_tests.rs
tests/options/: attempt_timeout_option_tests.rs  attempt_timeout_policy_tests.rs  mod.rs  retry_config_values_tests.rs  retry_delay_duration_format_tests.rs  retry_delay_tests.rs  retry_jitter_tests.rs  retry_options_basic_tests.rs  retry_options_tests.rs
tests/readme/: mod.rs  readme_examples_tests.rs
tests/support/: mod.rs
