[package]
name = "qubit-retry"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rust-retry"
description = "Retry module, providing a feature-complete, type-safe retry management system with support for multiple delay strategies and event listeners"
homepage = "https://github.com/qubit-ltd/rust-retry"
documentation = "https://docs.rs/qubit-retry"
readme = "README.md"
keywords = ["retry", "resilience", "backoff", "fault-tolerance", "qubit"]
categories = ["development-tools", "asynchronous"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_retry"
doctest = false

[dependencies]
qubit-config = "0.8.0"
qubit-function = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
tokio = { version = "1.0", features = ["time", "rt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
