[package]
name = "qubit-retry"
version = "0.10.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-retry"
description = "Retry module, providing a feature-complete, type-safe retry management system with support for multiple delay strategies and event listeners"
homepage = "https://github.com/qubit-ltd/rs-retry"
documentation = "https://docs.rs/qubit-retry"
readme = "README.md"
keywords = ["retry", "resilience", "backoff", "fault-tolerance", "qubit"]
categories = ["development-tools", "asynchronous"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_retry"

[features]
default = []
tokio = ["dep:tokio"]
config = ["dep:qubit-config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.10"
tokio = { version = "1.52", features = ["time", "rt"], optional = true }
rand = "0.10"

qubit-datatype = "0.2"
qubit-error = "0.2"
qubit-serde = "0.2"
qubit-config = { version = "0.11", optional = true }
qubit-function = "0.11"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.52", features = ["full", "test-util"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
